# xdg-desktop-portal

./: .git-blame-ignore-revs  .gitignore  .gitlint  .mypy.ini  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile.am  Makefile.am.inc  NEWS  NEWS.md  README.md  RELEASE_HOWTO.md  SECURITY.md  autogen.sh  configure.ac  dex-todo.txt  docbook.css  glib-tap.mk  glnx-fdio.c  gobject-linter.toml  goblint.toml  hi.po  index.html  meson.build  meson.options  meson_options.txt  portal-docs.html  xdg-desktop-portal.pc.in
data/: Makefile.am.inc  meson.build  org.freedesktop.app.portal.ScreenCast.xml  org.freedesktop.background.Monitor.xml  org.freedesktop.diagnostic.portal.Desktop.xml  org.freedesktop.handler.portal.experimental.Credential.xml  org.freedesktop.host.portal.Registry.xml  org.freedesktop.impl.portal.Access.xml  org.freedesktop.impl.portal.Account.xml  org.freedesktop.impl.portal.AppChooser.xml  org.freedesktop.impl.portal.Background.xml  org.freedesktop.impl.portal.Clipboard.xml  org.freedesktop.impl.portal.CredentialsX.xml  org.freedesktop.impl.portal.DynamicLauncher.xml  org.freedesktop.impl.portal.Email.xml  org.freedesktop.impl.portal.EmulatedInput.xml  org.freedesktop.impl.portal.FileChooser.xml  org.freedesktop.impl.portal.GlobalShortcuts.xml  org.freedesktop.impl.portal.Inhibit.xml  org.freedesktop.impl.portal.InputCapture.xml  org.freedesktop.impl.portal.Lockdown.xml  org.freedesktop.impl.portal.Notification.xml  org.freedesktop.impl.portal.ParentalControls.xml  org.freedesktop.impl.portal.PermissionStore.xml  org.freedesktop.impl.portal.Print.xml  org.freedesktop.impl.portal.Proxy.xml  org.freedesktop.impl.portal.RemoteDesktop.xml  org.freedesktop.impl.portal.Request.xml  org.freedesktop.impl.portal.SaveRestore.xml  org.freedesktop.impl.portal.ScreenCast.xml  org.freedesktop.impl.portal.Screenshot.xml  org.freedesktop.impl.portal.Secret.xml  org.freedesktop.impl.portal.Session.xml  org.freedesktop.impl.portal.Settings.xml  org.freedesktop.impl.portal.Usb.xml  org.freedesktop.impl.portal.Wallpaper.xml  org.freedesktop.impl.portal.experimental.Credential.xml  org.freedesktop.portal.Account.xml  org.freedesktop.portal.AppChooser.xml  org.freedesktop.portal.Background.xml  (+43 more)
doc/: Makefile.am  REUSE.toml  api-reference.rst  architecture.rst  backends.rst  background-app-monitor.rst  building-and-running.rst  common-conventions.rst  common.xml  conf.py  configuration-file.rst  contributing.rst  convenience-libraries.rst  copy-subdir.py  copy-subtree.py  docbook.css  documents-and-fuse.rst  entitlements.rst  fix-rst-dbus.py  for-app-developers.rst  for-contributors.rst  for-desktop-developers.rst  icons.rst  impl-dbus-interfaces.rst  implementation-interfaces.rst  index.rst  introduction.rst  merge-requirements.rst  meson.build  permission-store-use.rst  pipewire.rst  portal-docs.xml  portal-docs.xml.in  portal-interfaces.rst  portal-internals.rst  portals-conf.rst  portals.conf.rst.in  pull-requests.rst  reasons-to-use-portals.rst  redirect.html  (+10 more)
doc/_static/: xdg.css
doc/reviewing/: API_DESIGN.md  CODING_STYLE.md  COMMITS.md  OWNERSHIP.md  PATTERNS.md  README.md  SECURITY.md  TESTING.md
doc/website/: Gemfile  README.md  _config.yml  index.md  site.webmanifest  style.css
document-portal/: Makefile.am.inc  document-enums.h  document-portal-fuse.c  document-portal-fuse.h  document-portal.c  document-portal.h  document-store.c  document-store.h  file-transfer.c  file-transfer.h  flatpak-db.h  meson.build  org.freedesktop.impl.portal.PermissionStore.service.in  org.freedesktop.portal.Documents.service.in  permission-db.c  permission-db.h  permission-store.c  xdg-document-portal.service.in  xdg-permission-store.c  xdg-permission-store.h  xdg-permission-store.service.in  xdp-fuse.c  xdp-main.c  xdp-util.c  xdp-util.h
document-portal/gvdb/: gvdb-builder.c  gvdb-reader.c
pipewire/: meson.build  module-portal.c  pipewire.conf  wireplumber.conf  xdp-pw-keys.h
pipewire/pw-module/: meson.build  module-portal.c
pipewire/wp-plugin/: meson.build  xdp-wp-permission-manager.c  xdp-wp-permission-manager.h  xdp-wp-plugin.c
shared/: meson.build  sd-escape.c  sd-escape.h  xdp-app-info-flatpak-private.h  xdp-app-info-flatpak.c  xdp-app-info-host-private.h  xdp-app-info-host.c  xdp-app-info-linyaps.c  xdp-app-info-private.h  xdp-app-info-registry.c  xdp-app-info-registry.h  xdp-app-info-snap-private.h  xdp-app-info-snap.c  xdp-app-info.c  xdp-app-info.h  xdp-dex.c  xdp-dex.h  xdp-entitlements-private.h  xdp-entitlements.c  xdp-entitlements.h  xdp-types.h  xdp-usb-query.c  xdp-usb-query.h  xdp-utils.c  xdp-utils.h
src/: .proxy-resolver.c.swp  Makefile.am.inc  REUSE.toml  account.c  account.h  background-monitor.c  background-monitor.h  background.c  background.h  call.c  call.h  camera.c  camera.h  clipboard.c  clipboard.h  credential.c  credential.h  credentials.c  credentials.h  device.c  device.h  documents.c  documents.h  dynamic-launcher.c  dynamic-launcher.h  email.c  email.h  emulated-input.c  emulated-input.h  fc-monitor.c  fc-monitor.h  file-access.c  file-access.h  file-chooser.c  file-chooser.h  flatpak-instance.c  flatpak-instance.h  flatpak-portal-error.h  flatpak-utils.c  flatpak-utils.h  (+146 more)
src/helpers/: rewrite-launchers.c  validate-icon.c  validate-sound.c  xdg-desktop-portal-rewrite-launchers.service.in
src/portals/: account.c  account.h  background.c  camera.c  (+46 more)
tests/: .mypy.ini  .pytest.ini  Makefile.am.inc  README.md  __init__.py  account-portal.c  account.c  account.h  asan.suppression  background.c  background.h  camera.c  camera.h  can-use-fuse.c  conftest.py  doc_utils.py  email.c  email.h  emulated-input.c  emulated-input.h  filechooser.c  filechooser.h  glib-backports.c  glib-backports.h  inhibit.c  inhibit.h  limited-portals.c  location.c  location.h  meson.build  notification.c  notification.h  openuri.c  openuri.h  print.c  print.h  pytest-wrapper.sh  run-test.sh  screenshot.c  screenshot.h  (+57 more)
wireplumber/: meson.build  output-nodes.lua  wireplumber.conf  wp.conf.in  xdp-wp-permission-manager.c  xdp-wp-permission-manager.h  xdp-wp-plugin.c
(+254 files in other folders)
